editing personal info

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -31,7 +31,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -195,11 +195,11 @@
               <p>If you have any questions or concerns about this Privacy Policy or our privacy practices, please contact us at:</p>
               <address class="mb-0">
                 <strong>Donna's Real Estate Services</strong><br>
-                123 Main Street<br>
+                Office Location: Edmonton Realtor 201-5607-199 Street<br>
                 Edmonton, AB T5J 1N5<br>
                 Canada<br>
                 <a href="mailto:privacy@donnasrealestate.com">privacy@donnasrealestate.com</a><br>
-                Phone: +1-780-555-1234
+                Cell: 780-964-2591
               </address>
             </div>
           </div>
@@ -207,66 +207,43 @@
       </div>
     </main>
 
-    <footer class="bg-dark text-white py-4">
+    <footer class="bg-dark text-white py-5">
       <div class="container">
-        <div class="row gy-4 align-items-center">
-          <div class="col-md-4">
+        <div class="row mb-4">
+          <div class="col-md-4 mb-4 mb-md-0">
             <h4 class="mb-3">Donna's Real Estate</h4>
-            <p class="mb-0">
-              123 Main Street<br />
-              Edmonton, AB T5J 1N5<br />
-              Phone: +1-780-555-1234<br />
-              Email: info@donnasrealestate.com
-            </p>
-          </div>
-          <div class="col-md-4 text-center">
-            <div class="d-flex justify-content-center gap-3 fs-4">
-              <a
-                href="#"
-                class="text-white"
-                aria-label="Facebook"
-                title="Facebook"
-              >
-                <i class="fab fa-facebook"></i>
-              </a>
-              <a
-                href="#"
-                class="text-white"
-                aria-label="Instagram"
-                title="Instagram"
-              >
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a
-                href="#"
-                class="text-white"
-                aria-label="LinkedIn"
-                title="LinkedIn"
-              >
-                <i class="fab fa-linkedin"></i>
-              </a>
+            <p class="text-white-50 mb-3">Helping you find your dream home since 2008.</p>
+            <div class="d-flex">
+              <a href="#" class="text-white me-3"><i class="fab fa-facebook-f fa-lg"></i></a>
+              <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
+              <a href="#" class="text-white"><i class="fab fa-linkedin-in fa-lg"></i></a>
             </div>
           </div>
-          <div class="col-md-4 text-md-end">
-            <a
-              href="#home"
-              class="btn btn-outline-light"
-              aria-label="Back to top"
-              title="Back to top"
-            >
-              <i class="fas fa-arrow-up"></i> Back to Top
-            </a>
+          <div class="col-md-4 mb-4 mb-md-0">
+            <h5 class="mb-3">Quick Links</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="/index.html#home" class="text-white-50 text-decoration-none">Home</a></li>
+              <li class="mb-2"><a href="/index.html#about" class="text-white-50 text-decoration-none">About</a></li>
+              <li class="mb-2"><a href="/index.html#buying-home" class="text-white-50 text-decoration-none">Buying</a></li>
+              <li class="mb-2"><a href="/index.html#selling-home" class="text-white-50 text-decoration-none">Selling</a></li>
+              <li class="mb-2"><a href="/index.html#contact" class="text-white-50 text-decoration-none">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <h5 class="mb-3">Contact Us</h5>
+            <p class="text-white-50 mb-2"><i class="fas fa-map-marker-alt me-2"></i>Office Location: Edmonton Realtor 201-5607-199 Street Edmonton, AB</p>
+            <p class="text-white-50 mb-2"><i class="fas fa-phone me-2"></i>Cell: 780-964-2591</p>
+            <p class="text-white-50 mb-2"><i class="fas fa-envelope me-2"></i>info@donnasrealestate.com</p>
           </div>
         </div>
-        <div class="row mt-4 pt-4 border-top border-secondary">
-          <div class="col-md-6 text-center text-md-start">
-            <p class="small mb-0">© 2025 Donna's Real Estate. All rights reserved.</p>
+        <hr class="border-secondary my-4" />
+        <div class="row">
+          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+            <p class="mb-0">&copy; 2025 Donna's Real Estate. All rights reserved.</p>
           </div>
           <div class="col-md-6 text-center text-md-end">
-            <p class="small mb-0">
-              <a href="/sitemap.xml" class="text-white text-decoration-none">Sitemap</a> |
-              <a href="/privacy-policy.html" class="text-white text-decoration-none">Privacy Policy</a>
-            </p>
+            <a href="/sitemap.xml" class="text-white-50 text-decoration-none me-3">Sitemap</a>
+            <a href="/privacy-policy.html" class="text-white-50 text-decoration-none">Privacy Policy</a>
           </div>
         </div>
       </div>
