--- a/index.html
+++ b/index.html
@@ -3,30 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Donna's Real Estate Services - Experience, integrity, and dedication in buying and selling homes in Edmonton. Professional realtor with over 15 years of experience." />
-    <meta name="keywords" content="real estate, buying home, selling home, Edmonton realtor, Donna's Real Estate, Edmonton homes, property listings, home valuation, real estate agent" />
+    <meta
+      name="description"
+      content="Donna's Real Estate Services - Experience, integrity, and dedication in buying and selling homes in Edmonton. Professional realtor with over 18 years of experience."
+    />
+    <meta
+      name="keywords"
+      content="real estate, buying home, selling home, Edmonton realtor, Donna's Real Estate, Edmonton homes, property listings, home valuation, real estate agent"
+    />
     <meta name="author" content="Donna's Real Estate" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
-    <meta property="og:title" content="Donna's Real Estate Services - Edmonton's Trusted Realtor" />
-    <meta property="og:description" content="Experience, integrity, and dedication in buying and selling homes in Edmonton. Professional realtor with over 15 years of experience." />
-    <meta property="og:image" content="https://www.donnasrealestate.com/images/main.jpeg" />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="Donna's Real Estate Services - Edmonton's Trusted Realtor"
+    />
+    <meta
+      property="og:description"
+      content="Experience, integrity, and dedication in buying and selling homes in Edmonton. Professional realtor with over 18 years of experience."
+    />
+    <meta property="og:image" content="images/main.jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://www.donnasrealestate.com" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_CA" />
     <meta property="og:site_name" content="Donna's Real Estate" />
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Donna's Real Estate Services - Edmonton's Trusted Realtor" />
-    <meta name="twitter:description" content="Experience, integrity, and dedication in buying and selling homes in Edmonton." />
-    <meta name="twitter:image" content="https://www.donnasrealestate.com/images/main.jpeg" />
+    <meta
+      name="twitter:title"
+      content="Donna's Real Estate Services - Edmonton's Trusted Realtor"
+    />
+    <meta
+      name="twitter:description"
+      content="Experience, integrity, and dedication in buying and selling homes in Edmonton."
+    />
+    <meta name="twitter:image" content="images/main.jpeg" />
+    <meta name="twitter:site" content="@donnasrealestate" />
+    <meta name="twitter:creator" content="@donnasrealestate" />
+
+    <!-- Pinterest -->
+    <meta name="pinterest:image" content="images/main.jpeg" />
+    <meta
+      name="pinterest:description"
+      content="Experience, integrity, and dedication in buying and selling homes in Edmonton."
+    />
+
+    <!-- WhatsApp / iMessage -->
+    <meta
+      property="og:image:alt"
+      content="Donna's Real Estate Services in Edmonton"
+    />
+
     <link rel="canonical" href="https://www.donnasrealestate.com" />
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="icon" href="/favicon.ico">
-    <title>Donna's Real Estate Services - Edmonton Realtor | Buying & Selling Homes</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>
+      Donna's Real Estate Services - Edmonton Realtor | Buying & Selling Homes
+    </title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -125,7 +167,11 @@
           </div>
           <div class="col-lg-5">
             <div class="hero-image-container">
-              <img src="images/main.jpeg" alt="Donna - Your Trusted Realtor" class="hero-image img-fluid rounded shadow">
+              <img
+                src="images/main.jpeg"
+                alt="Donna - Your Trusted Realtor"
+                class="hero-image img-fluid rounded shadow"
+              />
             </div>
           </div>
         </div>
@@ -150,7 +196,7 @@
               <p class="lead">
                 Donna is a highly experienced realtor in the Edmonton area,
                 known for her integrity and dedication to her clients. With over
-                15 years in the industry, she has helped numerous families find
+                18 years in the industry, she has helped numerous families find
                 their dream homes and sell their properties efficiently.
               </p>
               <p>
@@ -669,16 +715,6 @@
                     Send Message
                   </button>
                 </form>
-                <div class="mt-4">
-                  <p class="mb-2">Schedule an appointment:</p>
-                  <a
-                    href="https://www.appointlet.com/donna-real-estate"
-                    target="_blank"
-                    class="btn btn-outline-primary"
-                  >
-                    <i class="far fa-calendar-alt me-2"></i>Book an Appointment
-                  </a>
-                </div>
               </div>
             </div>
           </div>
@@ -693,8 +729,7 @@
                         <i class="fas fa-phone"></i>
                       </div>
                       <div>
-                        <h4 class="h6 mb-1">Phone</h4>
-                        <p>(780) 555-1234</p>
+                        <p>Cell: 780-964-2591</p>
                       </div>
                     </div>
                   </li>
@@ -705,7 +740,7 @@
                       </div>
                       <div>
                         <h4 class="h6 mb-1">Email</h4>
-                        <p>donna@realestate.com</p>
+                        <p>donnadc@shaw.ca</p>
                       </div>
                     </div>
                   </li>
@@ -716,24 +751,20 @@
                       </div>
                       <div>
                         <h4 class="h6 mb-1">Office</h4>
-                        <p>123 Real Estate Ave<br />Edmonton, AB T5K 2L9</p>
+                        <p>
+                          Edmonton Realtor<br />201-5607-199 Street Edmonton, AB
+                        </p>
                       </div>
                     </div>
                   </li>
                 </ul>
-                <div class="mt-4">
-                  <h3 class="h5 mb-3">Follow Me</h3>
-                  <div class="d-flex">
-                    <a href="#" class="btn btn-outline-primary me-2"
-                      ><i class="fab fa-facebook-f"></i
-                    ></a>
-                    <a href="#" class="btn btn-outline-primary me-2"
-                      ><i class="fab fa-instagram"></i
-                    ></a>
-                    <a href="#" class="btn btn-outline-primary me-2"
-                      ><i class="fab fa-linkedin-in"></i
-                    ></a>
-                  </div>
+                <div class="mt-4 text-start">
+                  <img
+                    src="images/remax.jpg"
+                    alt="RE/MAX Logo"
+                    class="img-fluid"
+                    style="max-width: 180px"
+                  />
                 </div>
               </div>
             </div>
@@ -844,97 +875,95 @@
       </div>
     </section>
 
-    <footer class="bg-dark text-white py-4">
+    <footer class="bg-dark text-white py-5">
       <div class="container">
-        <div class="row gy-4 align-items-center">
-          <div class="col-md-4">
+        <div class="row mb-4">
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
             <h4 class="mb-3">Donna's Real Estate</h4>
-            <p class="mb-0">Helping you find your dream home since 2008.</p>
+            <p class="text-white-50 mb-3">
+              Helping you find your dream home since 2008.
+            </p>
+            <div class="d-flex">
+              <a href="#" class="text-white me-3"
+                ><i class="fab fa-facebook-f fa-lg"></i
+              ></a>
+              <a href="#" class="text-white me-3"
+                ><i class="fab fa-instagram fa-lg"></i
+              ></a>
+              <a href="#" class="text-white"
+                ><i class="fab fa-linkedin-in fa-lg"></i
+              ></a>
+            </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
             <h5 class="mb-3">Quick Links</h5>
-            <ul class="list-unstyled mb-0">
-              <li>
+            <ul class="list-unstyled">
+              <li class="mb-2">
                 <a href="#home" class="text-white-50 text-decoration-none"
                   >Home</a
                 >
               </li>
-              <li>
+              <li class="mb-2">
                 <a href="#about" class="text-white-50 text-decoration-none"
                   >About</a
                 >
               </li>
-              <li>
+              <li class="mb-2">
                 <a
                   href="#buying-home"
                   class="text-white-50 text-decoration-none"
                   >Buying</a
                 >
               </li>
-              <li>
+              <li class="mb-2">
                 <a
                   href="#selling-home"
                   class="text-white-50 text-decoration-none"
                   >Selling</a
                 >
               </li>
-              <li>
+              <li class="mb-2">
                 <a href="#contact" class="text-white-50 text-decoration-none"
                   >Contact</a
                 >
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
-            <h5 class="mb-3">Subscribe to Newsletter</h5>
-            <form>
-              <div class="input-group mb-3">
-                <input
-                  type="email"
-                  class="form-control"
-                  placeholder="Your Email"
-                  aria-label="Your Email"
-                  aria-describedby="subscribe-btn"
-                />
-                <button
-                  class="btn btn-primary"
-                  type="button"
-                  id="subscribe-btn"
-                >
-                  Subscribe
-                </button>
-              </div>
-            </form>
+          <div class="col-lg-4 col-md-12">
+            <h5 class="mb-3">Contact Us</h5>
+            <address class="text-white-50 mb-0">
+              <p class="mb-2">
+                <i class="fas fa-map-marker-alt me-2"></i>Edmonton Realtor
+              </p>
+              <p class="mb-2 ms-4">201-5607-199 Street</p>
+              <p class="mb-2 ms-4">Edmonton, AB</p>
+              <p class="mb-2">
+                <i class="fas fa-phone me-2"></i>Cell: 780-964-2591
+              </p>
+              <p class="mb-2">
+                <i class="fas fa-envelope me-2"></i>donnadc@shaw.ca
+              </p>
+            </address>
           </div>
         </div>
-        <hr class="my-4" />
+        <hr class="border-secondary my-4" />
         <div class="row">
-          <div class="col-md-6 text-center text-md-start">
+          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
             <p class="mb-0">
               &copy; 2025 Donna's Real Estate. All rights reserved.
             </p>
           </div>
           <div class="col-md-6 text-center text-md-end">
-            <a href="#" class="text-white-50 me-2"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="#" class="text-white-50 me-2"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="#" class="text-white-50"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-          </div>
-        </div>
-        <div class="row mt-4 pt-4 border-top border-secondary">
-          <div class="col-md-6 text-center text-md-start">
-            <p class="small mb-0">Copyright 2025 Donna's Real Estate. All rights reserved.</p>
-          </div>
-          <div class="col-md-6 text-center text-md-end">
-            <p class="small mb-0">
-              <a href="/sitemap.xml" class="text-white text-decoration-none">Sitemap</a> |
-              <a href="/privacy-policy" class="text-white text-decoration-none">Privacy Policy</a>
-            </p>
+            <a
+              href="/sitemap.xml"
+              class="text-white-50 text-decoration-none me-3"
+              >Sitemap</a
+            >
+            <a
+              href="/privacy-policy.html"
+              class="text-white-50 text-decoration-none"
+              >Privacy Policy</a
+            >
           </div>
         </div>
       </div>
@@ -950,53 +979,53 @@
     <script src="script.js"></script>
     <!-- Structured Data for Local Business -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "RealEstateAgent",
-      "name": "Donna's Real Estate Services",
-      "image": "https://www.donnasrealestate.com/images/main.jpeg",
-      "url": "https://www.donnasrealestate.com",
-      "telephone": "+1-780-555-1234",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "123 Main Street",
-        "addressLocality": "Edmonton",
-        "addressRegion": "AB",
-        "postalCode": "T5J 1N5",
-        "addressCountry": "CA"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 53.5461,
-        "longitude": -113.4938
-      },
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday"
-          ],
-          "opens": "09:00",
-          "closes": "17:00"
+      {
+        "@context": "https://schema.org",
+        "@type": "RealEstateAgent",
+        "name": "Donna's Real Estate Services",
+        "image": "https://www.donnasrealestate.com/images/main.jpeg",
+        "url": "https://www.donnasrealestate.com",
+        "telephone": "+1-780-964-2591",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "201-5607-199 Street",
+          "addressLocality": "Edmonton",
+          "addressRegion": "AB",
+          "postalCode": "T5J 1N5",
+          "addressCountry": "CA"
         },
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": "Saturday",
-          "opens": "10:00",
-          "closes": "15:00"
-        }
-      ],
-      "sameAs": [
-        "https://www.facebook.com/donnasrealestate",
-        "https://www.instagram.com/donnasrealestate",
-        "https://www.linkedin.com/in/donnasrealestate"
-      ],
-      "priceRange": "$$"
-    }
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 53.5461,
+          "longitude": -113.4938
+        },
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday"
+            ],
+            "opens": "09:00",
+            "closes": "17:00"
+          },
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": "Saturday",
+            "opens": "10:00",
+            "closes": "15:00"
+          }
+        ],
+        "sameAs": [
+          "https://www.facebook.com/donnasrealestate",
+          "https://www.instagram.com/donnasrealestate",
+          "https://www.linkedin.com/in/donnasrealestate"
+        ],
+        "priceRange": "$$"
+      }
     </script>
   </body>
 </html>
