Add link to Edmonton Room Finder website in footer section

--- a/index.html
+++ b/index.html
@@ -875,6 +875,18 @@
       </div>
     </section>
 
+    <div class="container text-center py-3">
+      <a
+        href="https://www.edmontonroomfinder.com"
+        target="_blank"
+        rel="noopener"
+        title="Looking for affordable room rental? Check out this site"
+        class="text-primary fw-bold text-decoration-none"
+      >
+        Looking for affordable room rental? Check out edmonton room finder.
+      </a>
+    </div>
+
     <footer class="bg-dark text-white py-5">
       <div class="container">
         <div class="row mb-4">
